--- a/css/styles.css
+++ b/css/styles.css
@@ -74,3 +74,12 @@ text-align: left;
 .card-body {
 font-family: "Lobster", cursive;
 }
+
+
+.carousel-caption {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.carousel {
+    border: solid #5637DD;
+}
