--- a/css/styles.css
+++ b/css/styles.css
@@ -83,3 +83,10 @@ font-family: "Lobster", cursive;
 .carousel {
     border: solid #5637DD;
 }
+
+#carouselButton {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+}
