--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ header h2 {
 .jumbotron {
   margin: 0;
   padding: 30px;
-  background-image: linear-gradient(to right, #5637dd, #orange, #60106b);
+  background-image: linear-gradient(to right, #5637dd, #3046C5, #60106b);
   color: white; }
 
 .row-content {
@@ -41,7 +41,7 @@ small {
 
 .card-header {
   max-width: 100%;
-  max-height: auto;
+  max-height: 100%;
   text-align: left;
   background-color: #60106B;
   margin-top: 1em;
