--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ small {
 
 .card-header {
   max-width: 100%;
-  max-height: 100%;
+  max-height: auto;
   text-align: left;
   background-color: #60106B;
   margin-top: 1em;
@@ -69,3 +69,11 @@ small {
   right: 0;
   bottom: 0;
   z-index: 100; }
+
+#reserveModal .modal-header {
+  color: white;
+  background-color: #17A2B8; }
+
+#loginModal .modal-header {
+  color: white;
+  background-color: #901CAD; }
